# serial-port-demo

./: .gitignore  Cargo.toml  Justfile
src/: agent.rs  host.rs
src/api/: messages.rs  mod.rs
