[package]
name = "serial-port-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "agent"
path = "src/agent.rs"

[[bin]]
name = "host"
path = "src/host.rs"

[lib]
name = "api"
path = "src/api/mod.rs"

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
serialport = "4.3.0"
